e-commerce/kubernetes/ingress-definition.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ecommerce
spec:
  rules:
    - http:
        paths:
          - path: /users 
            pathType: Prefix
            backend:
              service:
                name: users-app
                port:
                  number: 8080
